[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Leandr0Fr <leandro00fr@gmail.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.1"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = 'app.main:main'
test = 'pytest:main'

[tool.ruff]
line-length = 110
ignore = ["F403", "F405"]

select = [
  "E",
  "F",
  "UP",
  "I",
]